Fix overflow issue with modal

--- a/web/src/scss/components/Page/_App.scss
+++ b/web/src/scss/components/Page/_App.scss
@@ -39,6 +39,7 @@
       width: 100%;
       height: 100%;
       background: #FFF;
+      overflow: scroll;
 
       button {
         display: inline;
